--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <img src="img/logo.png" alt="logo">
                     </div>
                     <div class="col-6 align-self-center text-right">
-                        <a href="file:///C:/Users/Original%20Shop/Desktop/Atlas/contact-form-05/index.html" class="text-white lead">RESERVER</a>
+                        <a href="form.html" class="text-white lead">RESERVER</a>
                     </div>
                 </div>
             </header>
